--- a/roles/mariadb/templates/wp.cnf.j2
+++ b/roles/mariadb/templates/wp.cnf.j2
@@ -1,3 +1,7 @@
+#
+# this seems to have issue - maybe mysql versions dependent
+# TDB: clean up later
+
 [client]
 user=root
 password={{ root_db_pass }}
