--- a/roles/wordpress/templates/wp-config.php.j2
+++ b/roles/wordpress/templates/wp-config.php.j2
@@ -20,17 +20,17 @@
 
 // ** MySQL settings - You can get this info from your web host ** //
 /** The name of the database for WordPress */
-define('DB_NAME', '{{  }}');
+define('DB_NAME', '{{ wp_db_name }}');
 
 /** MySQL database username */
-define('DB_USER', '{{  }}');
+define('DB_USER', '{{ wp_db_user }}');
 
 /** MySQL database password */
-define('DB_PASSWORD', 'password_here');
+define('DB_PASSWORD', '{{ wp_db_password }}');
 
 
 /** MySQL hostname */
-define('DB_HOST', '{{ db_ip  }}');
+define('DB_HOST', '{{ db_server_ip  }}');
 
 /** Database Charset to use in creating database tables. */
 define('DB_CHARSET', 'utf8');
